fix header layout on mobile phones

--- a/assets/less/CMS.less
+++ b/assets/less/CMS.less
@@ -275,14 +275,17 @@ img {
 }
 
 @media (max-width: 665px) {
+  .navbar-inner {
+    margin: 0 5px;
+  }
   .burger {
     display: block;
     border-left: 1px solid rgba(0,0,0,.247059);
     height: 51px;
     font-size: 23px;
     margin-top: -11px;
-    padding: 10px 18px 0;
-    margin-right: -20px;
+    padding: 10px 14px 0;
+    margin-right: -5px;
     cursor: pointer;
   }
   .blog-nav {
